--- a/docroot/modules/custom/dropsolid_dependency_injection/dropsolid_dependency_injection.services.yml
+++ b/docroot/modules/custom/dropsolid_dependency_injection/dropsolid_dependency_injection.services.yml
@@ -1,5 +1,12 @@
 # This is a database service.
 services:
-  dropsolid.restoutput:
+  dropsolid_dependency_injection.restoutput:
     class: Drupal\dropsolid_dependency_injection\RestOutputService
     arguments: ['@http_client']
+
+  dropsolid_dependency_injection.breadcrumb:
+    class: Drupal\dropsolid_dependency_injection\RestOutputBreadcrumbBuilder
+
+    # Priority determines the order in which Breadcrumb services run.
+    tags:
+      - { name: breadcrumb_builder, priority: 100 }
