--- a/docroot/modules/custom/dropsolid_dependency_injection/dropsolid_dependency_injection.services.yml
+++ b/docroot/modules/custom/dropsolid_dependency_injection/dropsolid_dependency_injection.services.yml
@@ -10,3 +10,8 @@ services:
     # Priority determines the order in which Breadcrumb services run.
     tags:
       - { name: breadcrumb_builder, priority: 100 }
+
+  # This is an example of how to replace a standard service with a custom one.
+  plugin.manager.mail:
+    class: Drupal\dropsolid_dependency_injection\DropsolidMailManager
+    arguments: [ '@container.namespaces', '@cache.discovery', '@module_handler', '@config.factory', '@logger.factory', '@string_translation', '@renderer' ]
