--- a/docroot/modules/custom/dropsolid_dependency_injection/dropsolid_dependency_injection.services.yml
+++ b/docroot/modules/custom/dropsolid_dependency_injection/dropsolid_dependency_injection.services.yml
@@ -1,4 +1,3 @@
-# This is a database service.
 services:
   dropsolid_dependency_injection.restoutput:
     class: Drupal\dropsolid_dependency_injection\RestOutputService
@@ -6,8 +5,6 @@ services:
 
   dropsolid_dependency_injection.breadcrumb:
     class: Drupal\dropsolid_dependency_injection\RestOutputBreadcrumbBuilder
-
-    # Priority determines the order in which Breadcrumb services run.
     tags:
       - { name: breadcrumb_builder, priority: 100 }
 
@@ -15,3 +12,10 @@ services:
   plugin.manager.mail:
     class: Drupal\dropsolid_dependency_injection\DropsolidMailManager
     arguments: [ '@container.namespaces', '@cache.discovery', '@module_handler', '@config.factory', '@logger.factory', '@string_translation', '@renderer' ]
+
+  # The best way to extend the existing definition is to use decorator.
+  # In the case someone else can use their own decorator too.
+  dropsolid_language_manager:
+    class: Drupal\dropsolid_dependency_injection\DropsolidLanguageManager
+    decorates: language_manager
+    arguments: [ '@language.default' ]
